--- a/production/monitoring/exporter-blackbox/service.yaml
+++ b/production/monitoring/exporter-blackbox/service.yaml
@@ -1,3 +1,25 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+  name: blackbox-config
+  namespace: monitoring
+data:
+  blackbox.yml: |
+    modules:
+      http_2xx:
+        prober: http
+        http:
+          preferred_ip_protocol: "ip4"
+          tls_config:
+            insecure_skip_verify: true
+      tcp_connect:
+        prober: tcp
+      ssh_banner:
+        prober: tcp
+        tcp:
+          query_response:
+          - expect: "^SSH-2.0-"
+          - send: "SSH-2.0-blackbox-ssh-check"
 ---
 kind: Deployment
 apiVersion: apps/v1
@@ -23,6 +45,8 @@ spec:
       containers:
         - name: *app
           image: quay.io/prometheus/blackbox-exporter:v0.24.0
+          args:
+            - --config.file=/config/blackbox.yml
           resources:
             limits:
               cpu: "500m"
@@ -30,6 +54,14 @@ spec:
             requests:
               cpu: "1m"
               memory: "16Mi"
+          volumeMounts:
+            - mountPath: /config/blackbox.yml
+              name: blackbox-config
+              subPath: blackbox.yml
+      volumes:
+        - name: blackbox-config
+          configMap:
+            name: blackbox-config
 ---
 apiVersion: v1
 kind: Service
