--- a/production/monitoring/exporter-blackbox/service.yaml
+++ b/production/monitoring/exporter-blackbox/service.yaml
@@ -88,24 +88,53 @@ spec:
     module: [http_2xx]
   staticConfigs:
     - targets:
-      - http://brother_hl-2270dw.internal.untouchedwagons.com
-      - http://camera-front-door.internal.untouchedwagons.com
-      - http://camera-side-door.internal.untouchedwagons.com
-      - http://homeassistant.internal.untouchedwagons.com:8123
-      - https://pve-cluster-node-01.internal.untouchedwagons.com:8006
-      - https://pve-cluster-node-02.internal.untouchedwagons.com:8006
-      - https://pve-cluster-node-03.internal.untouchedwagons.com:8006
-      - http://netboot.internal.untouchedwagons.com
-      - http://opnsense.internal.untouchedwagons.com
-      - http://rmcard205.internal.untouchedwagons.com
-      - http://storage.internal.untouchedwagons.com
-      - http://technitium.internal.untouchedwagons.com
+      - brother_hl-2270dw.internal.untouchedwagons.com
+      - camera-front-door.internal.untouchedwagons.com
+      - camera-side-door.internal.untouchedwagons.com
+      - homeassistant.internal.untouchedwagons.com
+      - netboot.internal.untouchedwagons.com
+      - opnsense.internal.untouchedwagons.com
+      - rmcard205.internal.untouchedwagons.com
+      - storage.internal.untouchedwagons.com
+      - technitium.internal.untouchedwagons.com
   relabelings:
     - action: replace
       sourceLabels: [__address__]
       targetLabel: __param_target
     - action: replace
       sourceLabels: [__param_target]
+      targetLabel: instance
+    - action: replace
+      targetLabel: __address__
+      replacement: exporter-blackbox.monitoring.svc.cluster.local:9115
+    - action: replace
+      targetLabel: module
+      replacement: http_2xx
+---
+apiVersion: monitoring.coreos.com/v1alpha1
+kind: ScrapeConfig
+metadata:
+  name: &app exporter-blackbox-https
+  namespace: monitoring
+spec:
+  scrapeInterval: 1m
+  metricsPath: /probe
+  params:
+    module: [http_2xx]
+  staticConfigs:
+    - targets:
+      - https://pve-cluster-node-01.internal.untouchedwagons.com:8006
+      - https://pve-cluster-node-02.internal.untouchedwagons.com:8006
+      - https://pve-cluster-node-03.internal.untouchedwagons.com:8006
+      - https://unifi.internal.untouchedwagons.com:8443
+  relabelings:
+    - action: replace
+      sourceLabels: [__address__]
+      targetLabel: __param_target
+    - action: replace
+      sourceLabels: [__param_target]
+      regex: https:\/\/([^:]+)(?::\d+)?   # The first group matches the host, the second matches the port.
+      replacement: '$1'
       targetLabel: instance
     - action: replace
       targetLabel: __address__
@@ -137,6 +166,8 @@ spec:
       targetLabel: __param_target
     - action: replace
       sourceLabels: [__param_target]
+      regex: ([^:]+)(?::\d+)?   # The first group matches the host, the second matches the port.
+      replacement: '$1'
       targetLabel: instance
     - action: replace
       targetLabel: __address__
@@ -159,7 +190,14 @@ spec:
     - targets:
       - netboot.internal.untouchedwagons.com:22
       - pivpn.internal.untouchedwagons.com:22
+      - pve-cluster-node-01.internal.untouchedwagons.com:22
+      - pve-cluster-node-02.internal.untouchedwagons.com:22
+      - pve-cluster-node-03.internal.untouchedwagons.com:22
+      - k3s-prod-node-01.internal.untouchedwagons.com:22
+      - k3s-prod-node-02.internal.untouchedwagons.com:22
+      - k3s-prod-node-03.internal.untouchedwagons.com:22
       - u6-lite.internal.untouchedwagons.com:22
+      - unifi.internal.untouchedwagons.com:22
       - ups.internal.untouchedwagons.com:22
       - usw-pro-48-poe.internal.untouchedwagons.com:22
       - vault.internal.untouchedwagons.com:22
@@ -169,6 +207,8 @@ spec:
       targetLabel: __param_target
     - action: replace
       sourceLabels: [__param_target]
+      regex: ([^:]+)(?::\d+)?   # The first group matches the host, the second matches the port.
+      replacement: '$1'
       targetLabel: instance
     - action: replace
       targetLabel: __address__
@@ -176,3 +216,22 @@ spec:
     - action: replace
       targetLabel: module
       replacement: ssh_banner
+---
+apiVersion: monitoring.coreos.com/v1
+kind: PrometheusRule
+metadata:
+  name: blackbox
+  namespace: monitoring
+spec:
+  groups:
+    - name: blackbox
+      rules:
+        - alert: targetUnavailable
+          annotations:
+            description: 'Target "{{ $labels.instance }}" is not available.'
+            summary: Target unavailable.
+          expr: |-
+            probe_success == 0
+          for: 1m
+          labels:
+            severity: critical
