--- a/production/home-assistant/zwave-js-ui/service.yaml
+++ b/production/home-assistant/zwave-js-ui/service.yaml
@@ -20,6 +20,8 @@ spec:
       labels:
         app: zwave-js-ui
     spec:
+      nodeSelector:
+        feature.node.kubernetes.io/usb-ff_10c4_ea60.present: "true"
       securityContext:
         fsGroup: 568
       containers:
@@ -30,21 +32,40 @@ spec:
           env:
             - name: TZ
               value: "America/Toronto"
-          # resources:
-          #   limits:
-          #     memory: 1Gi
-          #     cpu: "2"
-          #   requests:
-          #     memory: 512Mi
-          #     cpu: "0.2"
           volumeMounts:
             - mountPath: /usr/src/app/store
               name: zwave-config
+            - mountPath: /dev/zwave0
+              name: zwave-dongle
+
+        - name: backup
+          image: untouchedwagons/simple-backup:1.0.5
+          volumeMounts:
+            - mountPath: /data
+              name: zwave-config
+            - mountPath: /backups
+              name: backups
+          env:
+            - name: BACKUP_APPEND_DIRECTORY
+              value: "/kubernetes/production/zwave"
+            - name: BACKUP_BASE_NAME
+              value: "zwave"
+            - name: BACKUP_RETENTION
+              value: "7"
+            - name: BACKUP_FREQUENCY
+              value: "0 0 * * *"
 
       volumes:
         - name: zwave-config
           persistentVolumeClaim:
             claimName: zwave-config
+        - name: backups
+          nfs:
+            server: 192.168.35.30
+            path: /mnt/tank/Media/Backups
+        - name: zwave-dongle
+          hostPath: # Good lord that's a long path
+            path: /dev/serial/by-id/usb-Silicon_Labs_CP2102N_USB_to_UART_Bridge_Controller_72a3599c46bcea11ab8496e368aed703-if00-port0
 ---
 apiVersion: v1
 kind: Service
@@ -58,16 +79,6 @@ spec:
     - name: http
       targetPort: 8091
       port: 8091
----
-apiVersion: v1
-kind: Service
-metadata:
-  name: zwave-js-ui-websock
-  namespace: home-assistant
-spec:
-  selector:
-    app: zwave-js-ui
-  ports:
     - name: websock
       targetPort: 3000
       port: 3000
