Added BlueSky bookmark

--- a/production/default/homepage/service.yaml
+++ b/production/default/homepage/service.yaml
@@ -148,6 +148,9 @@ data:
             - Github:
                 icon: github.png
                 href: https://github.com
+            - BlueSky:
+                icon: bluesky.png
+                href: https://bsky.app
         - Multimedia:
             - Sonarr:
                 icon: sonarr.png
