--- a/inventory/prod-cluster/group_vars/all.yml
+++ b/inventory/prod-cluster/group_vars/all.yml
@@ -10,6 +10,9 @@ system_timezone: "America/Toronto"
 # interface which will be used for flannel
 flannel_iface: "eth0"
 
+cilium_bgp: false
+calico_ebpf: false
+
 # apiserver_endpoint is virtual ip-address which will be configured on each master
 apiserver_endpoint: "192.168.35.50"
 
