Reduced CPU request, high request was causing migration issues

--- a/production/default/jellyfin/service.yaml
+++ b/production/default/jellyfin/service.yaml
@@ -45,7 +45,7 @@ spec:
               gpu.intel.com/i915: "1"
             requests:
               memory: 1024Mi
-              cpu: "1"
+              cpu: "10m"
               gpu.intel.com/i915: "1"
           volumeMounts:
             - mountPath: /config
