Reduced CPU request, high request was causing migration issues

--- a/production/networking/ispyagentdvr/service.yaml
+++ b/production/networking/ispyagentdvr/service.yaml
@@ -41,7 +41,7 @@ spec:
           resources:
             requests:
               memory: 256Mi
-              cpu: "2"
+              cpu: "250m"
               gpu.intel.com/i915: "1"
             limits:
               memory: 512Mi
