Added Ceph dashboard Modified ScrapeConfigs to have a cluster label for the Ceph dashboard

--- a/production/monitoring/ceph/rule.yaml
+++ b/production/monitoring/ceph/rule.yaml
@@ -905,6 +905,10 @@ metadata:
   name: rook-ceph-exporter
   namespace: monitoring
 spec:
+  relabelings:
+    - action: replace
+      targetLabel: cluster
+      replacement: rook-ceph-cluster
   scrapeTimeout: 30s
   staticConfigs:
     - targets:
@@ -916,6 +920,10 @@ metadata:
   name: rook-ceph-mgr
   namespace: monitoring
 spec:
+  relabelings:
+    - action: replace
+      targetLabel: cluster
+      replacement: rook-ceph-cluster
   scrapeTimeout: 30s
   staticConfigs:
     - targets:
