Added File Browser to Homepage

--- a/production/default/homepage/service.yaml
+++ b/production/default/homepage/service.yaml
@@ -306,6 +306,9 @@ data:
             - Tdarr:
                 icon: tdarr.png
                 href: https://tdarr.services.untouchedwagons.com
+            - File Browser:
+                icon: filebrowser.png
+                href: https://file-browser.services.untouchedwagons.com
 
         - Monitoring:
             - Grafana:
