--- a/production/monitoring/exporter-linux/service.yaml
+++ b/production/monitoring/exporter-linux/service.yaml
@@ -18,3 +18,5 @@ spec:
       - pve-cluster-node-02.internal.untouchedwagons.com:9100
       - pve-cluster-node-03.internal.untouchedwagons.com:9100
       - technitium.internal.untouchedwagons.com:9100
+      - pve.internal.untouchedwagons.com:9100
+      - storage.internal.untouchedwagons.com:9100
