--- a/production/database/postgresql/service.yaml
+++ b/production/database/postgresql/service.yaml
@@ -17,7 +17,8 @@ spec:
   instances: 3
 
   storage:
-    size: 10Gi
+    size: 25Gi
+    storageClass: local-path
 
   monitoring:
     enablePodMonitor: true
